# directoryshard

./: README.md  pyproject.toml  setup.cfg
src/tests/: test.py
