[project]
name = "directoryshard"
version = "1.0"
dependencies = []
requires-python= ">= 3.8"
authors = [
    {name = "Gerard", email = "gweatherby@uchc.edu"},
    {name = "Jon Wedell", email = "wedell@uchc.edu"},
]
dynamic = ["license"] 

[project.scripts]
directoryshard = "directoryshard.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

